<resources>
    <string name="app_name">Practica2</string>
    <string name="action_settings">Settings</string>
    <string name="agregar">Agregar</string>
    <string name="Nombre">Nombre App</string>
    <string name="Desarrollador">Desarrollador</string>
    <string name="Detalle">Detalle</string>
    <string name="intalada">Instalada</string>
    <string name="actualizada">Actualizada</string>
    <string name="falta">Falta ingresar Datos</string>
    <string name="app_detalles">Detalles</string>
    <string name="app_add">Agregar App</string>
    <string name="add">Salvar</string>
    <string name="editar">Editar</string>
    <string name="desinstalar">Desinstalar</string>
    <string name="abrir">Abrir</string>
    <string name="actualizar">Actualizar</string>
    <string name="sinApp">No hay app instaladas</string>
    <string name="Actualizando">Actualizando</string>
    <string name="ActualizacionCompleta">Actualizacion Completa</string>
</resources>
