<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="irolso.com.practica2.DetalleActivity">

    <LinearLayout
        android:id="@+id/DetalleActivityLayoutAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/DetalleActivityDesarrollador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/DetalleActivityDetalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="16dp"
        android:paddingBottom="10dp"/>

    <Button
        android:id="@+id/DetalleActivityEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/DetalleActivityDesistanlar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desinstalar"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/DetalleActivityAbrir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/DetalleActivityActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar"
        android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/DetalleActivityLayoutEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:id="@+id/DetalleActivityEditarNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nombre"/>

    <EditText
        android:id="@+id/DetalleActivityEditarDesarrollador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Desarrollador"/>

    <EditText
        android:id="@+id/DetalleActivityEditarDetalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Detalle"/>
    <CheckBox
        android:id="@+id/DetalleActivityEditarCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Actualizar"
        />

    <Button
        android:id="@+id/DetalleActivityEditarSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>
</LinearLayout>

</LinearLayout>
