<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="irolso.com.practica2.AddActivity">

    <EditText
        android:id="@+id/AddActivityNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nombre"/>

    <EditText
        android:id="@+id/AddActivityDesarrollador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Desarrollador"/>

    <EditText
        android:id="@+id/AddActivityDetalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Detalle"/>
    <CheckBox
        android:id="@+id/AddActivityCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Actualizar"
        />

    <Button
        android:id="@+id/AddActivitySave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

</LinearLayout>
